		word Fullname for the long filename.
		Fixes for Sparc systems.
		File forwarding now really depends on the downlink billing
		flag.
		Now limits fetching of newsheaders according to area setting.
		Added the Size parameter to the tic files, this appeared to
		be missing since a while.
		Fixes for Fido->internet gate for dropped characters during
		linewrap. Experimental.

	mbfile:
		During check the file databases are reset to filemode 0660.
		Implemented "mbfile adopt" function.
		Started working on long filename support. The real name on
		disk is the long filename, the database records also holds
		an uppercase mangled 8.3 filename. In most cases this is just
		the same name in upper and lowercase. Name mangling like Win$
		is performed on the long filenames.
		Implemented "mbfile import" function, this imports complete
		areas from files.bbs information.
		Added "mbfile toberep" function, this gives an overview of the
		toberep database. The program mbtoberep does this as well, but
		that one gives a complete dump and is for developer use.
		The "mbfile index" function now also writes files.bbs files,
		the index.html files for http download and 00index files in
		all available areas. The files.bbs files have download
		counters included.
		The mbfile check function now converts the short filenames
		to DOS 8.3 filenames. (The first time this logs lots of
		errors).
		The mbfile list function now gives a listing of the contents
		of a file area if the area number is given as argument.
		Implemented "mbfile move" command. You can only move one file
		at the same time.
		Implemented "mbfile delete" and "mbfile undelete" commands.
		The command mbfile check now removes obsolete file databases.
		Fixes for Sparc systems.
		Fixed index screens to prevent negative totals with large
		filebases.
		Added standard doctype header and commentline to the html 
		pages.

	mball:
		The index function is now obsolete, this is added to mbfile.