@@ -4514,7 +4514,7 @@ v0.33.19        26-Oct-2001
 		linewrap. Experimental.
 
 	mbfile:
-		During check the file databases are reset to filemode 0660.
+		During checks the file databases are reset to filemode 0660.
 		Implemented "mbfile adopt" function.
 		Started working on long filename support. The real name on
 		disk is the long filename, the database records also holds
@@ -4544,6 +4544,8 @@ v0.33.19        26-Oct-2001
 		filebases.
 		Added standard doctype header and commentline to the html 
 		pages.
+		The mbfile check function deletes double filerecords in the
+		database.
 
 	mball:
 		The index function is now obsolete, this is added to mbfile.
